# rustjs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci-test.yaml  manual-release.yml
data/: cjs.js  esm.js
data/mods/: cjs.js  esm.js
src/: error.rs  lib.rs  module.rs  resolver.rs  worker.rs
